Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/7151070/T7151070.out
T7151070.java:17:24: compiler.err.report.access: T7151070a.PrivateCls, private, T7151070a
1 error
